--- a/index.html
+++ b/index.html
@@ -1,29 +1,223 @@
 <!doctype html>
 <html lang="en">
-  <head>
-    <title>Đại Học Hà Nội</title>
-    <!-- Required meta tags -->
-    <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-    <link rel="icon" type=“image/x-icon” href="res/img/logo-hanu.png">
-    <!-- CSS -->
-    <link rel="stylesheet" href="https://meyerweb.com/eric/tools/css/reset/reset.css">
-    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" crossorigin="anonymous">
-    <link rel="stylesheet" href="style.css">
-  </head>
-  <body>
-      <!-- header -->
-    <header id="header"></header>
-      <!-- main -->
-    <main id="main"></main>
-      <!-- footer -->
-    <footer id="footer"></footer>
 
-    <!-- Optional JavaScript -->
-    <!-- jQuery first, then Popper.js, then Bootstrap JS -->
-    <script defer src="javascript.js"></script>
-    <script src="https://code.jquery.com/jquery-3.4.1.slim.min.js" crossorigin="anonymous"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js" crossorigin="anonymous"></script>
-    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js" crossorigin="anonymous"></script>
-  </body>
+<head>
+  <title>Đại Học Hà Nội</title>
+  <!-- Required meta tags -->
+  <meta charset="utf-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+  <link rel="icon" type=“image/x-icon” href="res/img/logo-hanu.png">
+  <!-- CSS -->
+  <link rel="stylesheet" href="https://meyerweb.com/eric/tools/css/reset/reset.css">
+  <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.13.0/css/all.css">
+  <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css"
+    crossorigin="anonymous">
+  <link rel="stylesheet" href="style.css">
+</head>
+
+<body>
+  <!-- header -->
+  <header id="header">
+    <!-- header nav top -->
+    <div class="header-nav-top">
+      <div class="wrap">
+        <!-- left menu -->
+        <ul class="menu responsive-h">
+          <li><a href="">Tuyển Dụng</a></li>
+          <li><a href="">Ba Công Khai</a></li>
+          <li><a href="">Đề Án Tự Chủ</a></li>
+          <li><a href="">Nghiên Cứu Khoa Học</a></li>
+        </ul>
+        <!-- right menu -->
+        <ul class="menu">
+          <!-- thong tin -->
+          <li>
+            <a href class="dropdown">Thông Tin <i class="fa fa-caret-down" aria-hidden="true"></i></a>
+            <ul class="sub hide">
+              <li><a href="">Hội Thảo Khoa Học</a></li>
+              <li><a href="">Văn Bản Pháp Luật</a></li>
+              <li><a href="">Tổ Chức - Đoàn Thể</a></li>
+              <li><a href="">Đảo Bảo Chất Lượng</a></li>
+              <li><a href="">Bộ Giáo Dục</a></li>
+              <li><a href="">Hỏi Đáp</a></li>
+              <li class="responsive-a"><a href="">Tuyển Dụng</a></li>
+              <li class="responsive-a"><a href="">Ba Công Khai</a></li>
+              <li class="responsive-a"><a href="">Đề Án Tự Chủ</a></li>
+            </ul>
+          </li>
+
+          <li>
+            <input type="text" name="nav-search" id="nav-search" placeholder="Tìm Kiếm">
+          </li>
+          <!-- ngon ngu -->
+          <li>
+            <div class="d-flex">
+              <a href class="dropdown"><img src="res/img/vietnam.png" alt="VN"> <i class="fa fa-caret-down"
+                  aria-hidden="true"></i></a>
+              <ul class="sub hide">
+                <li><a href=""><img src="res/img/vietnam.png" alt="VN"></a></li>
+                <li><a href=""><img src="res/img/uk.png" alt="UK"></a></li>
+              </ul>
+            </div>
+          </li>
+        </ul>
+      </div>
+    </div>
+
+    <!-- header nav bottom -->
+    <div class="header-nav-bottom">
+      <div>
+        <div class="header-bottom-brand">
+          <a href="index.html" class="d-flex flex-row wrap">
+            <img class="logo" src="res/img/logo-hanu.png" alt="logo">
+            <div>
+              <span>ĐẠI HỌC HÀ NỘI</span>
+              <span>HANOI UNIVERSITY</span>
+            </div>
+          </a>
+        </div>
+
+        <div class="header-nav-bottom-menu wrap">
+          <ul>
+            <!-- gioi thieu -->
+            <li>
+              <a href="">
+                <div>
+                  <i class="fas fa-university"></i>
+                  <span class="responsive-h">Giới Thiệu</span>
+                </div>
+              </a>
+            </li>
+            <!-- dao tao -->
+            <li>
+              <a href="">
+                <div>
+                  <i class="fas fa-graduation-cap"></i>
+                  <span class="responsive-h">Đào Tạo</span>
+                </div>
+              </a>
+            </li>
+            <!-- sinh vien -->
+            <li>
+              <a href="">
+                <div>
+                  <i class="fas fa-user-graduate"></i>
+                  <span class="responsive-h">Sinh Viên</span>
+                </div>
+              </a>
+            </li>
+            <!-- hop tac -->
+            <li>
+              <a href="">
+                <div>
+                  <i class="far fa-handshake"></i>
+                  <span class="responsive-h">Hợp Tác Quốc Tế</span>
+                </div>
+              </a>
+            </li>
+              <!-- du hoc -->
+            <li>
+              <a href="">
+                <div>
+                  <i class="fas fa-globe"></i>
+                  <span class="responsive-h">Du Học</span>
+                </div>
+              </a>
+            </li>
+          </ul>
+        </div>
+      </div>
+    </div>
+    <!-- play video button -->
+    <a href="" class="banner-button play" data-toggle="modal" data-target="#video-banner"><i class="far fa-play-circle"></i></a>
+    <a href="#main" class="banner-button learn-more">Tìm Hiểu Thêm</a>
+  </header>
+
+  <!-- main -->
+  <main id="main" class="wrap">main</main>
+  <!-- footer -->
+  <footer id="footer">
+    <div class="wrap">
+      <div class="footer-content">
+        <div class="col-left" id="col1">
+          <ul>
+            <li><a href="">Ảnh</a></li>
+            <li><a href="">Video</a></li>
+            <li><a href="">Thư Viện</a></li>
+            <li><a href="">Học Bổng</a></li>
+            <li><a href="">Thi Chứng Chỉ</a></li>
+
+          </ul>
+        </div>
+        <div class="col-left" id="col2">
+          <ul>
+            <li><a href="">Du Học</a></li>
+            <li><a href="">Cơ Hội Việc Làm</a></li>
+            <li><a href="">Gương Mặt Sinh Viên</a></li>
+            <li><a href="">Thông Tin Tuyển Sinh</a></li>
+            <li><a href="">Mạng Lưới Cựu Sinh Viên</a></li>
+          </ul>
+        </div>
+
+        <div id="footer-logo"><img src="res/img/logo-hanu.png" alt="Logo"></div>
+
+
+        <div class="col-right" id="col3">
+          <ul>
+            <li><span><i class="fas fa-university"></i> TRƯỜNG ĐẠI HỌC HÀ NỘI</span></li>
+            <li><i class="fas fa-map-marker-alt"></i> Km 9, Đường Nguyễn Trãi, Quận Nam Từ Liêm, Hà Nội, Việt Nam.</li>
+          </ul>
+        </div>
+
+        <div class="col-right" id="col4">
+          <ul>
+            <li><a href=""><i class="far fa-comment-alt"></i> Liên Hệ</a></li>
+            <li><a href="https://goo.gl/maps/iw8J4ZnLz9TxPgXGA" target="_blank" rel="noopener noreferrer"><i class="fas fa-map"></i> Bản Đồ</a></li>
+            <li><a href="tel:+8438544338" target="_blank" rel="noopener noreferrer"><i class="fas fa-phone"></i> (84-24)38544338</a></li>
+            <li><a href="mailto:hanu@hanu.edu.vn" target="_blank" rel="noopener noreferrer"><i class="far fa-envelope"></i> hanu@hanu.edu.vn</a></li>
+            <li><a href="mailto:tuyensinh@hanu.edu.vn" target="_blank" rel="noopener noreferrer"><i class="far fa-envelope"></i> tuyensinh@hanu.edu.vn</a></li>
+          </ul>
+        </div>
+      </div>
+      <div class="social">
+        <ul>
+          <li><a href="https://www.facebook.com/hanutuyensinh" target="_blank" rel="noopener noreferrer"><i class="fab fa-facebook"></i></a></li>
+          <li><a href=""><i class="fas fa-rss"></i></a></li>
+          <li><a href=""><i class="fab fa-twitter"></i></a></li>
+          <li><a href=""><i class="fab fa-youtube"></i></a></li>
+          <li><a href=""><i class="fab fa-instagram"></i></a></li>
+        </ul>
+        <p id="copyright">© 2020 Copyright</p>
+      </div>
+    </div>
+  </footer>
+
+  <!-- Modal -->
+  <div class="modal fade" id="video-banner" tabindex="-1" role="dialog" aria-labelledby="modelTitleId"
+    aria-hidden="true">
+    <div class="modal-dialog" role="document">
+      <div class="modal-content">
+        <div class="modal-header">
+          <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+            <span aria-hidden="true">&times;</span>
+          </button>
+        </div>
+        <div class="modal-body">
+          <iframe class="modal-video" src="https://www.youtube.com/embed/EJd6uDdGkZE" frameborder="0"
+            allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+        </div>
+      </div>
+    </div>
+  </div>
+
+  <!-- Optional JavaScript -->
+  <!-- jQuery first, then Popper.js, then Bootstrap JS -->
+  <script defer src="javascript.js"></script>
+  <script src="https://code.jquery.com/jquery-3.4.1.slim.min.js" crossorigin="anonymous"></script>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js"
+    crossorigin="anonymous"></script>
+  <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js" crossorigin="anonymous"></script>
+  <script defer src="https://use.fontawesome.com/releases/v5.13.0/js/all.js" crossorigin="anonymous"></script>
+</body>
+
 </html>
