move to scss, update index.html

--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
   <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.13.0/css/all.css">
   <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css"
     crossorigin="anonymous">
-  <link rel="stylesheet" href="style.css">
+  <link rel="stylesheet" href="style/style.css">
 </head>
 
 <body>
@@ -67,7 +67,7 @@
     <!-- header nav bottom -->
     <div class="header-nav-bottom">
       <div>
-        <div class="header-bottom-brand">
+        <div class="header-nav-bottom-brand">
           <a href="index.html" class="d-flex flex-row wrap">
             <img class="logo" src="res/img/logo-hanu.png" alt="logo">
             <div>
@@ -115,7 +115,7 @@
                 </div>
               </a>
             </li>
-              <!-- du hoc -->
+            <!-- du hoc -->
             <li>
               <a href="">
                 <div>
@@ -129,12 +129,95 @@
       </div>
     </div>
     <!-- play video button -->
-    <a href="" class="banner-button play" data-toggle="modal" data-target="#video-banner"><i class="far fa-play-circle"></i></a>
+    <a href="" class="banner-button play" data-toggle="modal" data-target="#video-banner"><i
+        class="far fa-play-circle"></i></a>
     <a href="#main" class="banner-button learn-more">Tìm Hiểu Thêm</a>
   </header>
 
   <!-- main -->
-  <main id="main" class="wrap">main</main>
+  <main id="main">
+    <div class="main-section light">
+      <a href="">Tin Tức Mới</a>
+      <div class="wrap">
+        <div class="news-group">
+          <div class="news-item">
+            <div>
+              <img src="res/img/news1.jpg" alt="news">
+            </div>
+            <p>Công đoàn Giáo dục Việt Nam tới thăm và tặng quà động viên các sinh viên đang ở lại Kí túc xá Trường Đại học Hà Nội</p>
+          </div>
+  
+          <div class="news-item">
+            <div>
+              <img src="res/img/news.jpg" alt="news">
+            </div>
+            <p>Thông báo điều chỉnh lịch làm việc của cán bộ công chức, viên chức, người lao động và người học của Nhà trường</p>
+          </div>
+        </div>
+
+        <div class="news-group">
+          <div class="news-item">
+            <div>
+              <img src="res/img/news2.jpg" alt="news">
+            </div>
+            <p>Cuộc thi Đại sứ văn hóa đọc 2020: Hành trình lan tỏa văn hóa đọc - 27/03/2020</p>
+          </div>
+  
+          <div class="news-item">
+            <div>
+              <img src="res/img/new3.jpg" alt="news">
+            </div>
+            <p>Tổng kết Đợt 1 Cuộc thi “Tuổi trẻ HANU- Sáng mãi niềm tin” - 16/03/2020</p>
+  
+          </div>
+        </div>
+
+      </div>
+    </div>
+    <div class="main-section dark">
+      <a href="">Tuyển Sinh</a>
+      <h4>Một số chuyên ngành nổi bật</h4>
+      <div class="wrap slide">
+        <a href="">
+          <div class="nganh">
+            <img src="res/img/buckingham-palace.png" alt="">
+            <span>Ngôn ngữ Anh</span>
+          </div>
+        </a>
+
+        <a href="">
+          <div class="nganh">
+            <img src="res/img/paifang.png" alt="">
+            <span>Ngôn ngữ Trung Quốc</span>
+          </div>
+        </a>
+
+        <a href="">
+          <div class="nganh">
+            <img src="res/img/advertising.png" alt="">
+            <span>Marketing</span>
+          </div>
+        </a>
+
+        <a href="">
+          <div class="nganh">
+            <img src="res/img/accounting.png" alt="">
+            <span>Kế toán</span>
+          </div>
+        </a>
+      </div>
+    </div>
+      <!-- img-bg -->
+    <div class="main-section light wrap img-bg">
+      <div class="div1"><a href=""><span>Mạng Lưới Cựu Sinh Viên</span></a></div>
+      <div class="div2"><a href=""><span>Nguyên Cứu Khoa Học</span></a></div>
+      <div class="div3"><a href=""><span>Hoạt Động</span></a></div>
+      <div class="div4"><a href=""><span>Hợp Tác Quốc Tế</span></a></div>
+      <div class="div5"><a href=""><span>Thông Báo</span></a></div>
+    </div>
+    <!-- <div class="main-section dark"></div> -->
+  </main>
+
   <!-- footer -->
   <footer id="footer">
     <div class="wrap">
@@ -172,16 +255,21 @@
         <div class="col-right" id="col4">
           <ul>
             <li><a href=""><i class="far fa-comment-alt"></i> Liên Hệ</a></li>
-            <li><a href="https://goo.gl/maps/iw8J4ZnLz9TxPgXGA" target="_blank" rel="noopener noreferrer"><i class="fas fa-map"></i> Bản Đồ</a></li>
-            <li><a href="tel:+8438544338" target="_blank" rel="noopener noreferrer"><i class="fas fa-phone"></i> (84-24)38544338</a></li>
-            <li><a href="mailto:hanu@hanu.edu.vn" target="_blank" rel="noopener noreferrer"><i class="far fa-envelope"></i> hanu@hanu.edu.vn</a></li>
-            <li><a href="mailto:tuyensinh@hanu.edu.vn" target="_blank" rel="noopener noreferrer"><i class="far fa-envelope"></i> tuyensinh@hanu.edu.vn</a></li>
+            <li><a href="https://goo.gl/maps/iw8J4ZnLz9TxPgXGA" target="_blank" rel="noopener noreferrer"><i
+                  class="fas fa-map"></i> Bản Đồ</a></li>
+            <li><a href="tel:+8438544338" target="_blank" rel="noopener noreferrer"><i class="fas fa-phone"></i>
+                (84-24)38544338</a></li>
+            <li><a href="mailto:hanu@hanu.edu.vn" target="_blank" rel="noopener noreferrer"><i
+                  class="far fa-envelope"></i> hanu@hanu.edu.vn</a></li>
+            <li><a href="mailto:tuyensinh@hanu.edu.vn" target="_blank" rel="noopener noreferrer"><i
+                  class="far fa-envelope"></i> tuyensinh@hanu.edu.vn</a></li>
           </ul>
         </div>
       </div>
       <div class="social">
         <ul>
-          <li><a href="https://www.facebook.com/hanutuyensinh" target="_blank" rel="noopener noreferrer"><i class="fab fa-facebook"></i></a></li>
+          <li><a href="https://www.facebook.com/hanutuyensinh" target="_blank" rel="noopener noreferrer"><i
+                class="fab fa-facebook"></i></a></li>
           <li><a href=""><i class="fas fa-rss"></i></a></li>
           <li><a href=""><i class="fab fa-twitter"></i></a></li>
           <li><a href=""><i class="fab fa-youtube"></i></a></li>
