--- a/index.html
+++ b/index.html
@@ -136,6 +136,7 @@
 
   <!-- main -->
   <main id="main">
+      <!-- tin tuc -->
     <div class="main-section light">
       <a href="">Tin Tức Mới</a>
       <div class="wrap">
@@ -174,10 +175,12 @@
 
       </div>
     </div>
+      <!-- tuyen sinh -->
     <div class="main-section dark">
       <a href="">Tuyển Sinh</a>
       <h4>Một số chuyên ngành nổi bật</h4>
-      <div class="wrap slide">
+      <div class="slide wrap">
+
         <a href="">
           <div class="nganh">
             <img src="res/img/buckingham-palace.png" alt="">
@@ -215,7 +218,28 @@
       <div class="div4"><a href=""><span>Hợp Tác Quốc Tế</span></a></div>
       <div class="div5"><a href=""><span>Thông Báo</span></a></div>
     </div>
-    <!-- <div class="main-section dark"></div> -->
+      <!-- why-choose -->
+    <div class="main-section light why-choose ">
+      
+      <div class="wrap faded">
+        <h1>Vì Sao Các Sinh Viên Lại Chọn Đại Học Hà Nội?</h1>
+        <table>
+          <tr>
+            <td><h2>200+</h2></td>
+            <td><h2>HỌC BỔNG</h2></td>
+            <td><h2>1 - 2</h2></td>
+            <td><h2>90%</h2></td>
+          </tr>
+          <tr>
+            <td><span>Trường đại học nước ngoài là đối tác</span></td>
+            <td><span>Với số lượng vô kể...</span></td>
+            <td><span>Ngoại ngữ mà bạn sẽ thành thạo khi ra trường</span></td>
+            <td><span>Giáo viên được đào tạo hoặc tu nghiệp ở nước ngoài</span></td>
+          </tr>
+        </table>
+
+      </div>
+    </div>
   </main>
 
   <!-- footer -->
