edit some files

--- a/index.html
+++ b/index.html
@@ -24,9 +24,9 @@
         <!-- left menu -->
         <ul class="menu responsive-h">
           <li><a href="">Tuyển Dụng</a></li>
-          <li><a href="">Ba Công Khai</a></li>
-          <li><a href="">Đề Án Tự Chủ</a></li>
-          <li><a href="">Nghiên Cứu Khoa Học</a></li>
+          <li><a href="">Du Học</a></li>
+          <li><a href="">Thông Tin Tuyển Sinh</a></li>
+          <li><a href="">Học Bổng</a></li>
         </ul>
         <!-- right menu -->
         <ul class="menu">
@@ -41,8 +41,9 @@
               <li><a href="">Bộ Giáo Dục</a></li>
               <li><a href="">Hỏi Đáp</a></li>
               <li class="responsive-a"><a href="">Tuyển Dụng</a></li>
-              <li class="responsive-a"><a href="">Ba Công Khai</a></li>
-              <li class="responsive-a"><a href="">Đề Án Tự Chủ</a></li>
+              <li class="responsive-a"><a href="">Du Học</a></li>
+              <li class="responsive-a"><a href="">Thông Tin Tuyển Sinh</a></li>
+              <li class="responsive-a"><a href="">Học Bổng</a></li>
             </ul>
           </li>
 
@@ -197,7 +198,7 @@
 
         <a href="">
           <div class="nganh">
-            <img src="res/img/advertising.png" alt="">
+            <img src="res/img/market.png" alt="">
             <span>Marketing</span>
           </div>
         </a>
@@ -251,17 +252,16 @@
             <li><a href="">Ảnh</a></li>
             <li><a href="">Video</a></li>
             <li><a href="">Thư Viện</a></li>
-            <li><a href="">Học Bổng</a></li>
             <li><a href="">Thi Chứng Chỉ</a></li>
-
+            <li><a href="">Nghiên Cứu Khoa Học</a></li>
           </ul>
         </div>
         <div class="col-left" id="col2">
           <ul>
-            <li><a href="">Du Học</a></li>
+            <li><a href="">Ba Công Khai</a></li>
+            <li><a href="">Đề Án Tự Chủ</a></li>
             <li><a href="">Cơ Hội Việc Làm</a></li>
             <li><a href="">Gương Mặt Sinh Viên</a></li>
-            <li><a href="">Thông Tin Tuyển Sinh</a></li>
             <li><a href="">Mạng Lưới Cựu Sinh Viên</a></li>
           </ul>
         </div>
