--- a/lienhe.html
+++ b/lienhe.html
@@ -24,9 +24,9 @@
         <!-- left menu -->
         <ul class="menu responsive-h">
           <li><a href="">Tuyển Dụng</a></li>
-          <li><a href="">Ba Công Khai</a></li>
-          <li><a href="">Đề Án Tự Chủ</a></li>
-          <li><a href="">Nghiên Cứu Khoa Học</a></li>
+          <li><a href="">Du Học</a></li>
+          <li><a href="">Thông Tin Tuyển Sinh</a></li>
+          <li><a href="">Học Bổng</a></li>
         </ul>
         <!-- right menu -->
         <ul class="menu">
@@ -39,10 +39,10 @@
               <li><a href="">Tổ Chức - Đoàn Thể</a></li>
               <li><a href="">Đảo Bảo Chất Lượng</a></li>
               <li><a href="">Bộ Giáo Dục</a></li>
-              <li><a href="">Hỏi Đáp</a></li>
               <li class="responsive-a"><a href="">Tuyển Dụng</a></li>
-              <li class="responsive-a"><a href="">Ba Công Khai</a></li>
-              <li class="responsive-a"><a href="">Đề Án Tự Chủ</a></li>
+              <li class="responsive-a"><a href="">Du Học</a></li>
+              <li class="responsive-a"><a href="">Thông Tin Tuyển Sinh</a></li>
+              <li class="responsive-a"><a href="">Học Bổng</a></li>
             </ul>
           </li>
 
@@ -200,8 +200,8 @@
             <li><a href="">Ảnh</a></li>
             <li><a href="">Video</a></li>
             <li><a href="">Thư Viện</a></li>
-            <li><a href="">Học Bổng</a></li>
             <li><a href="">Thi Chứng Chỉ</a></li>
+            <li><a href="">Nghiên Cứu Khoa Học</a></li>
           </ul>
         </div>
 
@@ -210,10 +210,10 @@
           <!-- col3 -->
         <div class="col-right" id="col3">
           <ul>
-            <li><a href="">Du Học</a></li>
+            <li><a href="">Ba Công Khai</a></li>
+            <li><a href="">Đề Án Tự Chủ</a></li>
             <li><a href="">Cơ Hội Việc Làm</a></li>
             <li><a href="">Gương Mặt Sinh Viên</a></li>
-            <li><a href="">Thông Tin Tuyển Sinh</a></li>
             <li><a href="">Mạng Lưới Cựu Sinh Viên</a></li>
           </ul>
         </div>
