--- a/index.html
+++ b/index.html
@@ -142,36 +142,36 @@
       <a href="">Tin Tức Mới</a>
       <div class="wrap">
         <div class="news-group">
-          <div class="news-item">
+          <a href="" class="news-item">
             <div>
               <img src="res/img/news1.jpg" alt="news">
             </div>
             <p>Công đoàn Giáo dục Việt Nam tới thăm và tặng quà động viên các sinh viên đang ở lại Kí túc xá Trường Đại học Hà Nội</p>
-          </div>
+          </a>
   
-          <div class="news-item">
+          <a href="" class="news-item">
             <div>
               <img src="res/img/news.jpg" alt="news">
             </div>
             <p>Thông báo điều chỉnh lịch làm việc của cán bộ công chức, viên chức, người lao động và người học của Nhà trường</p>
-          </div>
+          </a>
         </div>
 
         <div class="news-group">
-          <div class="news-item">
+          <a href="" class="news-item">
             <div>
               <img src="res/img/news2.jpg" alt="news">
             </div>
             <p>Cuộc thi Đại sứ văn hóa đọc 2020: Hành trình lan tỏa văn hóa đọc - 27/03/2020</p>
-          </div>
+          </a>
   
-          <div class="news-item">
+          <a href="" class="news-item">
             <div>
               <img src="res/img/new3.jpg" alt="news">
             </div>
             <p>Tổng kết Đợt 1 Cuộc thi “Tuổi trẻ HANU- Sáng mãi niềm tin” - 16/03/2020</p>
   
-          </div>
+          </a>
         </div>
 
       </div>
